new solutions